<resources>
    <string name="app_name">OurMap</string>
    <string name="map">Map</string>
    <string name="friends">Friends</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="password_enter_repeat">Password (Enter repeat)</string>
    <string name="entrance">Entrance</string>
    <string name="sign_in">Sign in</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="too_short_password_invent_at_least_8_characters">Too short password, invent at least 8 characters</string>
    <string name="incredible_password_or_email_entered">Incredible password or email entered</string>
    <string name="an_error_has_occurred_repeat_the_registration_again">An error has occurred! Repeat the registration again</string>
    <string name="create_account">Create account</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="your_id">Your id:</string>
    <string name="id_has_been_copied">ID has been copy</string>
    <string name="enter_or_paste_id_your_friend">Enter or paste ID your friend</string>
    <string name="enter_his_name_optional">Enter his name</string>
    <string name="add_friend">Add friend</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="the_length_of_the_user_ID_should_be_28_characters">The length of the user ID should be 28 characters</string>
    <string name="there_is_no_user_with_such_ID">There is no user with such ID</string>
    <string name="this_is_your_ID">This is your ID</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="this_friend_has_already_been_added">This friend has already been added</string>
    <string name="wants_to_add_you_to_friends">wants to add you to friends</string>
    <string name="information_about_the_service">Information about the service</string>
    <string name="you_share_the_location">You share the location</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="removing_from_friends">Removing from friends</string>
    <string name="сonfirm_the_action">Confirm the action</string>
    <string name="my_geo_location">My geo position</string>
    <string name="you">You</string>
    <string name="add_a_friend_to_see_it_on_the_map">Add a friend to see it on the map</string>
    <string name="settings">Settings</string>
    <string name="leave_the_account">Leave the account</string>
    <string name="leave">Leave</string>
    <string name="the_coordinates_are_still_unknown">The coordinates are still unknown</string>
    <string name="you_have_this_user_as_a_friend">You have this user as a friend</string>
</resources>